# tidb

./: .bazelrc  DEPS.bzl  Makefile  WORKSPACE  go.mod  go.sum  log_all  test.sh
br/pkg/membuf/: buffer.go
br/pkg/storage/: s3.go  storage.go  (+1 more)
ddl/: BUILD.bazel  backfilling.go  ddl.go  ddl_api.go  ddl_worker.go  disttask_flow.go  job_table.go  scheduler.go  table.go
ddl/ingest/: backend.go  backend_mgr.go  mock.go
ddl/resourcegrouptest/: resource_group_test.go
disttask/framework/: BUILD.bazel  framework_ha_test.go  framework_test.go
disttask/framework/planner/: BUILD.bazel  builder.go  import.go  plan.go  plan_test.go  planner.go
disttask/importinto/: BUILD.bazel  dispatcher.go  import_plan.go
disttask/loaddata/: BUILD.bazel  dispatcher.go  proto.go  subtask_executor.go
domain/: domain.go
domain/infosync/: info.go  mock_info.go
executor/: adapter.go  import_into.go  infoschema_reader.go  infoschema_reader_test.go  insert_common.go
executor/importer/: BUILD.bazel  table_import.go
infoschema/: tables.go
metrics/: ddl.go  metrics.go
pkg/ddl/: backfilling_dispatcher.go  backfilling_dispatcher_test.go  ddl_api.go
pkg/executor/: show_placement.go
pkg/infoschema/: builder.go  infoschema_test.go  infoschema_v2.go
planner/core/: common_plans.go  expression_rewriter.go  find_best_task.go  physical_plans.go  plan_cacheable_checker.go  resolve_indices.go  rule_decorrelate.go  rule_join_reorder.go  task.go
session/: bootstrap.go
sessionctx/variable/: session.go  sysvar.go  tidb_vars.go
testkit/: mockstore.go
util/disttask/: idservice.go
(+61 files in other folders)
